# social-media-analytics

./: .gitignore  pyproject.toml
social_media_analytics/: configs.py
social_media_analytics/labs/final_proj/: ai_soft_net.csv  ai_soft_net.csv default network.csv  ai_with_data_map.csv  ai_with_data_net.csv  lt_main.md  session.cys  social_network_nodes_with_names.csv
social_media_analytics/labs/lab1/: lrytas_crawler.py  test.ipynb  updated_lrytas_crawler.py
social_media_analytics/labs/lab2/: README.md  solution.ipynb
social_media_analytics/labs/lab2/.ipynb_checkpoints/: solution-checkpoint.ipynb
social_media_analytics/labs/lab3/: graph.html  graph_positions.json  graph_positions_1533.json  graph_positions_final.json  network.html  solution.ipynb
social_media_analytics/labs/lab3/.ipynb_checkpoints/: solution-checkpoint.ipynb
social_media_analytics/labs/lab4/: lt_main.md  main.md
social_media_analytics/labs/lab7/: ai_soft_map.csv  session.cys  social_network_edges.csv
