[tool.poetry]
name = "social-media-analytics"
version = "0.1.0"
description = ""
authors = ["Foxicution <foxicution@gmail.com>"]
readme = "README.md"
packages = [{include = "social_media_analytics"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
httpx = "^0.25.0"
selenium = "^4.12.0"
lxml = "^4.9.3"
function-pipes = "^0.1.2"
pandas = "^2.1.0"
networkx = "^3.1"
pyvis = "^0.3.2"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
python-louvain = "^0.16"
scipy = "^1.11.3"


[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.8.0"
python-lsp-ruff = "^1.5.1"
euporie = "^2.4.3"
ipykernel = "^6.25.2"
black = "^23.9.1"
isort = "^5.12.0"
notebook = "^7.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140

